--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   sticky_grouped_list: ^3.1.0
   grouped_list: ^6.0.0
 
+  flutter_sticky_header: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
